# soiltextureplot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_soil_data.csv  mkdocs.yml  pyproject.toml  texture_plot.ipynb
.cursor/rules/: project-conventions.mdc  python-formatting-auto.mdc
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml
app/: streamlit_app.py
docs/: api.md  index.md  installation.md  quickstart.md  releasing.md
notebooks/: texture_plot_marimo.py
soiltextureplot/: __init__.py  classifier.py  datasets.py  plotting.py  systems.py  triangle.py  utils.py
src/soiltextureplot/: __init__.py  classifier.py  datasets.py  plotting.py  systems.py  triangle.py  utils.py
tests/: test_smoke.py
