[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soiltextureplot"
version = "0.1.0"
description = "Soil texture triangle plotting and classification"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Amninder Singh", email = "amnindersingh13@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "matplotlib>=3.7.0",
  "mpltern>=1.0.0",
]
keywords = ["soil", "texture", "triangle", "plot", "classification", "ternary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/singhamninder/soiltextureplot"
"Bug Tracker" = "https://github.com/singhamninder/soiltextureplot/issues"

[tool.setuptools]
packages = ["soiltextureplot"]