[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soiltextureplot"
version = "0.1.3"
description = "Soil texture triangle plotting and classification"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Amninder Singh", email = "amnindersingh13@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "matplotlib>=3.7.0",
  "mpltern>=1.0.0",
]
keywords = ["soil", "texture", "triangle", "plot", "classification", "ternary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/singhamninder/soiltextureplot"
"Bug Tracker" = "https://github.com/singhamninder/soiltextureplot/issues"

[project.optional-dependencies]
app = [
    "streamlit>=1.57.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soiltextureplot = ["data/*.csv"]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "nbqa>=1.9.1",
  "marimo>=0.17.6",
  "ty>=0.0.34",
  "pre-commit>=4.3.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
]
